
  * Fixed small mistakes in the keyboard sequences displayed in the menus,
    and small discrepancies between default.keys/default.menus and reality
    (thanks to John Gabriele for having pointed out this).

  * Now we highlight correctly control characters in the command line.

  * Display request lists by columns instead of rows.
  
  * Allow window resizing during requests.

Changes from version 2.0.2

---- Bug fixes ----

  * Still better file handling for the THROUGH command.

  * Visual glitches appearing on Cygwin have been fixed.

Changes from version 2.0.1

---- Bug fixes ----

  * The file names for the THROUGH command were being generated
    correctly, but in the current directory instead of P_tmpdir.

  * The built-in ANSI escape sequences had a glitch that could cause
    some visual inconsistencies.

Changes from version 2.0

---- Bug fixes ----

  * The file names for the THROUGH command were being generated
    incorrectly.

Changes from version 1.43

---- Improvements ----

  * We got syntax highlighting! Thanks to Daniele Filaretti, whose undergrad
    thesis was about porting joe's syntax highlighting system to ne.

  * Billions of small improvements and cleanups.

Changes from version 1.42

---- Bug fixes ----

  * Finally fixed the BSD exit problem (ESC would kill ne on BSD and
    derivated operating systems). The problem lay in a slight difference
    between Linux and BSD in the getc() implementation (thanks to Alessio
    Orlandi for isolating the problem and finding a fix).

  * An eccess in loop counter increment would prevent alphabetic
    menu search to work under certain circumstances (thanks to
    Lewis Gentry for finding the problem and writing the fix).

  * The paragraphing procedure was very slow on very long lines.
    Todd found and fixed the problem.

Changes from version 1.41

---- Bug fixes ----

  * The file requester was bizarrely assuming that ".." and "." would