@@ -636,11 +636,11 @@ void unload_macros(void) {
 void help(char *p) {
 
 	action a;
-	int i;
+	int j, i = 0;
 	D(fprintf(stderr,"Help Called with parm %ld.\n",p);)
 	do {
 		print_message("Help: select Command and press Enter, or F1 or Escape or Escape-Escape");
-		if (p || (i = request_strings(command_names, ACTION_COUNT, MAX_COMMAND_WIDTH, FALSE)) >= 0) {
+		if (p || (i = request_strings(command_names, ACTION_COUNT, i, MAX_COMMAND_WIDTH, FALSE)) >= 0) {
          D(fprintf(stderr,"Help check #2: p=%lx, i=%d\n",p,i);)
 			if (p) {
 				for(i = 0; i < strlen(p); i++) if (isasciispace((unsigned char)p[i])) break;
@@ -667,7 +667,7 @@ void help(char *p) {
 			assert(i >= 0 && i < ACTION_COUNT);
 
 			print_message("Help: press Enter, or F1 or Escape or Escape-Escape");
-			i = request_strings(commands[i].help, commands[i].help_len, ne_columns, FALSE);
+			if ((j = request_strings(commands[i].help, commands[i].help_len, 0, ne_columns, FALSE)) < 0 ) i = j;
 		}
 	} while(i >= 0);
 	draw_status_bar();
